@@ -33,7 +33,7 @@ namespace Zenith
 		{
 			string callerPlugin = CallerIdentifier.GetCallingPluginName();
 			Logger.LogInformation($"Module {callerPlugin} requested config accessor.");
-			return _configManager.GetModuleAccessor(callerPlugin);
+			return ConfigManager.GetModuleAccessor(callerPlugin);
 		}
 
 		public static void RegisterModuleConfig<T>(string groupName, string configName, string description, T defaultValue, ConfigFlag flags = ConfigFlag.None) where T : notnull
@@ -115,10 +115,32 @@ namespace Zenith
 		private static string CoreModuleName => Assembly.GetEntryAssembly()?.GetName().Name ?? "K4-Zenith";
 		private static string _baseConfigDirectory = string.Empty;
 		private static readonly ConcurrentDictionary<string, ModuleConfig> _moduleConfigs = new ConcurrentDictionary<string, ModuleConfig>();
+
+		private static readonly ConcurrentDictionary<string, ConfigItem> _configLookupCache = new ConcurrentDictionary<string, ConfigItem>();
+
+		private static readonly ConcurrentDictionary<(Type, Type), Func<object, object>> _typeConverterCache =
+			new ConcurrentDictionary<(Type, Type), Func<object, object>>();
+
+		private static readonly ConcurrentDictionary<string, Timer> _pendingSaveTimers = new ConcurrentDictionary<string, Timer>();
+		private static readonly TimeSpan _saveDelay = TimeSpan.FromMilliseconds(500); // Batch saves with 500ms delay
+
 		private static ILogger Logger = null!;
 		public static bool GlobalChangeTracking { get; set; } = false;
 		public static bool GlobalAutoReloadEnabled { get; set; } = false;
 		private static FileSystemWatcher? _watcher;
+
+		private static readonly Lazy<IDeserializer> _deserializer = new Lazy<IDeserializer>(() =>
+			new DeserializerBuilder()
+				.WithNamingConvention(CamelCaseNamingConvention.Instance)
+				.IgnoreUnmatchedProperties()
+				.Build());
+
+		private static readonly Lazy<ISerializer> _serializer = new Lazy<ISerializer>(() =>
+			new SerializerBuilder()
+				.WithNamingConvention(CamelCaseNamingConvention.Instance)
+				.DisableAliases()
+				.ConfigureDefaultValuesHandling(DefaultValuesHandling.OmitNull)
+				.Build());
 
 		public ConfigManager(string baseConfigDirectory, ILogger logger)
 		{
@@ -128,9 +150,28 @@ namespace Zenith
 			Directory.CreateDirectory(Path.Combine(_baseConfigDirectory, "modules"));
 
 			SetupFileWatcher();
+			InitializeTypeConverters();
 		}
 
-		public ModuleConfigAccessor GetModuleAccessor(string moduleName)
+		private static void InitializeTypeConverters()
+		{
+			// String to common types
+			_typeConverterCache[(typeof(string), typeof(int))] = value => Convert.ToInt32((string)value, CultureInfo.InvariantCulture);
+			_typeConverterCache[(typeof(string), typeof(float))] = value => Convert.ToSingle((string)value, CultureInfo.InvariantCulture);
+			_typeConverterCache[(typeof(string), typeof(double))] = value => Convert.ToDouble((string)value, CultureInfo.InvariantCulture);
+			_typeConverterCache[(typeof(string), typeof(decimal))] = value => Convert.ToDecimal((string)value, CultureInfo.InvariantCulture);
+			_typeConverterCache[(typeof(string), typeof(bool))] = value => Convert.ToBoolean((string)value, CultureInfo.InvariantCulture);
+
+			// Object to common types
+			_typeConverterCache[(typeof(object), typeof(int))] = value => Convert.ToInt32(value, CultureInfo.InvariantCulture);
+			_typeConverterCache[(typeof(object), typeof(float))] = value => Convert.ToSingle(value, CultureInfo.InvariantCulture);
+			_typeConverterCache[(typeof(object), typeof(double))] = value => Convert.ToDouble(value, CultureInfo.InvariantCulture);
+			_typeConverterCache[(typeof(object), typeof(decimal))] = value => Convert.ToDecimal(value, CultureInfo.InvariantCulture);
+			_typeConverterCache[(typeof(object), typeof(bool))] = value => Convert.ToBoolean(value, CultureInfo.InvariantCulture);
+			_typeConverterCache[(typeof(object), typeof(string))] = value => value.ToString() ?? string.Empty;
+		}
+
+		public static ModuleConfigAccessor GetModuleAccessor(string moduleName)
 		{
 			return new ModuleConfigAccessor(moduleName);
 		}
@@ -142,7 +183,7 @@ namespace Zenith
 				NotifyFilter = NotifyFilters.LastWrite,
 				Filter = "*.yaml",
 				IncludeSubdirectories = true,
-				EnableRaisingEvents = true
+				EnableRaisingEvents = GlobalAutoReloadEnabled
 			};
 
 			_watcher.Changed += OnConfigFileChanged;
@@ -152,6 +193,12 @@ namespace Zenith
 		public static void Dispose()
 		{
 			_watcher?.Dispose();
+
+			foreach (var timer in _pendingSaveTimers.Values)
+			{
+				timer.Dispose();
+			}
+			_pendingSaveTimers.Clear();
 		}
 
 		public static void SetGlobalAutoReload(bool enabled)
@@ -163,20 +210,28 @@ namespace Zenith
 			}
 		}
 
-		private static Timer? _debounceTimer;
+		private static readonly ConcurrentDictionary<string, Timer> _debounceTimers = new ConcurrentDictionary<string, Timer>();
 
 		private static void OnConfigFileChanged(object sender, FileSystemEventArgs e)
 		{
 			if (!GlobalAutoReloadEnabled)
 				return;
 
-			_debounceTimer?.Dispose();
-			_debounceTimer = new Timer(DebounceCallback, e.FullPath, 1000, Timeout.Infinite);
+			if (_debounceTimers.TryRemove(e.FullPath, out var existingTimer))
+			{
+				existingTimer.Dispose();
+			}
+
+			var newTimer = new Timer(DebounceCallback, e.FullPath, 1000, Timeout.Infinite);
+			_debounceTimers[e.FullPath] = newTimer;
 		}
 
 		private static void DebounceCallback(object? state)
 		{
 			var fullPath = (string)state!;
+
+			_debounceTimers.TryRemove(fullPath, out _);
+
 			var relativePath = Path.GetRelativePath(_baseConfigDirectory, fullPath);
 			var pathParts = relativePath.Split(Path.DirectorySeparatorChar);
 			if (pathParts.Length >= 2 && pathParts[0] == "modules")
@@ -199,6 +254,8 @@ namespace Zenith
 
 			if (_moduleConfigs.TryGetValue(moduleName, out var existingConfig))
 			{
+				bool configChanged = false;
+
 				foreach (var group in newConfig.Groups)
 				{
 					var existingGroup = existingConfig.Groups.GetOrAdd(group.Key, new ConfigGroup { Name = group.Value.Name });
@@ -207,26 +264,63 @@ namespace Zenith
 					{
 						if (existingGroup.Items.TryGetValue(item.Key, out var existingItem))
 						{
-							existingItem.CurrentValue = item.Value.CurrentValue ?? existingItem.CurrentValue;
+							if (item.Value.CurrentValue != null && !item.Value.CurrentValue.Equals(existingItem.CurrentValue))
+							{
+								existingItem.CurrentValue = item.Value.CurrentValue;
+								configChanged = true;
+
+								InvalidateConfigCache(moduleName, group.Key, item.Key);
+							}
 						}
 						else
 						{
 							existingGroup.Items[item.Key] = item.Value;
+							configChanged = true;
+
+							InvalidateConfigCache(moduleName, group.Key, item.Key);
 						}
 					}
+				}
+
+				if (configChanged)
+				{
+					Logger.LogDebug($"Config values changed for module {moduleName}");
 				}
 			}
 			else
 			{
 				_moduleConfigs[moduleName] = newConfig;
+
+				// Invalidate all caches for this module
+				InvalidateAllConfigCache(moduleName);
 			}
 
 			if (!force)
 				Logger.LogInformation($"Config reloaded for module {moduleName}");
 		}
 
+		private static void InvalidateConfigCache(string moduleName, string groupName, string configName)
+		{
+			string cacheKey = $"{moduleName}:{groupName}:{configName}";
+			_configLookupCache.TryRemove(cacheKey, out _);
+		}
+
+		private static void InvalidateAllConfigCache(string moduleName)
+		{
+			var keysToRemove = _configLookupCache.Keys
+				.Where(k => k.StartsWith($"{moduleName}:"))
+				.ToList();
+
+			foreach (var key in keysToRemove)
+			{
+				_configLookupCache.TryRemove(key, out _);
+			}
+		}
+
 		public static void ReloadAllConfigs()
 		{
+			_configLookupCache.Clear();
+
 			foreach (var moduleName in _moduleConfigs.Keys)
 			{
 				ReloadModuleConfig(moduleName, true);
@@ -252,21 +346,50 @@ namespace Zenith
 
 			existingConfig.Flags = flags;
 
-			SaveModuleConfig(moduleName);
+			ScheduleModuleConfigSave(moduleName);
 		}
 
 		public static bool HasConfigValue(string callerModule, string groupName, string configName)
 		{
+			string cacheKey = $"{callerModule}:{groupName}:{configName}";
+			if (_configLookupCache.TryGetValue(cacheKey, out _))
+			{
+				return true;
+			}
+
 			if (_moduleConfigs.TryGetValue(callerModule, out var moduleConfig))
 			{
-				var group = moduleConfig.Groups.FirstOrDefault(g => g.Key == groupName);
-				return group.Value?.Items.ContainsKey(configName) ?? false;
+				if (moduleConfig.Groups.TryGetValue(groupName, out var group))
+				{
+					var result = group.Items.ContainsKey(configName);
+
+					if (result && group.Items.TryGetValue(configName, out var configItem))
+					{
+						_configLookupCache[cacheKey] = configItem;
+					}
+
+					return result;
+				}
 			}
 			return false;
 		}
 
 		public static T GetConfigValue<T>(string callerModule, string groupName, string configName) where T : notnull
 		{
+			string cacheKey = $"{callerModule}:{groupName}:{configName}";
+
+			if (_configLookupCache.TryGetValue(cacheKey, out var cachedItem))
+			{
+				try
+				{
+					return ConvertValue<T>(cachedItem.CurrentValue);
+				}
+				catch (Exception)
+				{
+					_configLookupCache.TryRemove(cacheKey, out _);
+				}
+			}
+
 			if (_moduleConfigs.TryGetValue(callerModule, out var moduleConfig))
 			{
 				var (found, value) = TryGetConfigValue<T>(moduleConfig, groupName, configName, callerModule);
@@ -289,8 +412,16 @@ namespace Zenith
 
 		private static (bool found, T value) TryGetConfigValue<T>(ModuleConfig config, string groupName, string configName, string callerModule, bool checkGlobalOnly = false) where T : notnull
 		{
-			var group = config.Groups.FirstOrDefault(g => g.Key == groupName);
-			var configItem = group.Value?.Items.GetValueOrDefault(configName);
+			if (!config.Groups.TryGetValue(groupName, out var group))
+			{
+				return (false, default!);
+			}
+
+			if (!group.Items.TryGetValue(configName, out var configItem))
+			{
+				return (false, default!);
+			}
+
 			if (configItem != null)
 			{
 				if (checkGlobalOnly && !configItem.Flags.HasFlag(ConfigFlag.Global))
@@ -298,64 +429,28 @@ namespace Zenith
 					Logger.LogWarning($"Config '{groupName}.{configName}' not allowed to be accessed globally");
 					return (false, default!);
 				}
+
 				if (callerModule != CoreModuleName && callerModule != config.ModuleName && !configItem.Flags.HasFlag(ConfigFlag.Global))
 				{
 					Logger.LogWarning($"Attempt to access non-global config '{groupName}.{configName}' from module '{callerModule}'");
 					return (false, default!);
 				}
+
 				if (configItem.CurrentValue == null)
 				{
 					Logger.LogWarning($"Config '{groupName}.{configName}' has a null value for module '{config.ModuleName}'");
 					throw new InvalidOperationException($"Configuration '{groupName}.{configName}' has null value for module '{config.ModuleName}'");
 				}
+
 				try
 				{
-					if (typeof(T) == typeof(string) && configItem.CurrentValue is string currentString && string.IsNullOrEmpty(currentString))
+					if (!checkGlobalOnly)
 					{
-						return (true, (T)(object)"");
+						var cacheKey = $"{callerModule}:{groupName}:{configName}";
+						_configLookupCache.TryAdd(cacheKey, configItem);
 					}
-					if (typeof(T) == typeof(List<string>) && configItem.CurrentValue is List<object> objectList)
-					{
-						var stringList = objectList.Select(o => o.ToString() ?? string.Empty).ToList();
-						return (true, (T)(object)stringList);
-					}
-					if (typeof(T) == typeof(List<int>) && configItem.CurrentValue is List<object> intObjectList)
-					{
-						var intList = intObjectList.Select(o => Convert.ToInt32(o, CultureInfo.InvariantCulture)).ToList();
-						return (true, (T)(object)intList);
-					}
-					if (typeof(T) == typeof(List<double>) && configItem.CurrentValue is List<object> doubleObjectList)
-					{
-						var doubleList = doubleObjectList.Select(o => Convert.ToDouble(o, CultureInfo.InvariantCulture)).ToList();
-						return (true, (T)(object)doubleList);
-					}
-					if (typeof(T) == typeof(List<float>) && configItem.CurrentValue is List<object> floatObjectList)
-					{
-						var floatList = floatObjectList.Select(o => Convert.ToSingle(o, CultureInfo.InvariantCulture)).ToList();
-						return (true, (T)(object)floatList);
-					}
-					if (typeof(T) == typeof(List<decimal>) && configItem.CurrentValue is List<object> decimalObjectList)
-					{
-						var decimalList = decimalObjectList.Select(o => Convert.ToDecimal(o, CultureInfo.InvariantCulture)).ToList();
-						return (true, (T)(object)decimalList);
-					}
-					if (typeof(T) == typeof(double) && configItem.CurrentValue is object doubleValue)
-					{
-						return (true, (T)(object)Convert.ToDouble(doubleValue, CultureInfo.InvariantCulture));
-					}
-					if (typeof(T) == typeof(float) && configItem.CurrentValue is object floatValue)
-					{
-						return (true, (T)(object)Convert.ToSingle(floatValue, CultureInfo.InvariantCulture));
-					}
-					if (typeof(T) == typeof(decimal) && configItem.CurrentValue is object decimalValue)
-					{
-						return (true, (T)(object)Convert.ToDecimal(decimalValue, CultureInfo.InvariantCulture));
-					}
-					if (typeof(T).IsPrimitive || typeof(T) == typeof(decimal))
-					{
-						return (true, (T)Convert.ChangeType(configItem.CurrentValue, typeof(T), CultureInfo.InvariantCulture));
-					}
-					return (true, (T)Convert.ChangeType(configItem.CurrentValue, typeof(T)));
+
+					return (true, ConvertValue<T>(configItem.CurrentValue));
 				}
 				catch (InvalidCastException ex)
 				{
@@ -368,7 +463,71 @@ namespace Zenith
 					throw;
 				}
 			}
+
 			return (false, default!);
+		}
+
+		private static T ConvertValue<T>(object value) where T : notnull
+		{
+			Type targetType = typeof(T);
+			Type sourceType = value.GetType();
+
+			if (sourceType == targetType)
+			{
+				return (T)value;
+			}
+
+			if (targetType == typeof(string) && value is string currentString && string.IsNullOrEmpty(currentString))
+			{
+				return (T)(object)"";
+			}
+
+			if (targetType == typeof(List<string>) && value is List<object> objectList)
+			{
+				var stringList = objectList.Select(o => o.ToString() ?? string.Empty).ToList();
+				return (T)(object)stringList;
+			}
+
+			if (targetType == typeof(List<int>) && value is List<object> intObjectList)
+			{
+				var intList = intObjectList.Select(o => Convert.ToInt32(o, CultureInfo.InvariantCulture)).ToList();
+				return (T)(object)intList;
+			}
+
+			if (targetType == typeof(List<double>) && value is List<object> doubleObjectList)
+			{
+				var doubleList = doubleObjectList.Select(o => Convert.ToDouble(o, CultureInfo.InvariantCulture)).ToList();
+				return (T)(object)doubleList;
+			}
+
+			if (targetType == typeof(List<float>) && value is List<object> floatObjectList)
+			{
+				var floatList = floatObjectList.Select(o => Convert.ToSingle(o, CultureInfo.InvariantCulture)).ToList();
+				return (T)(object)floatList;
+			}
+
+			if (targetType == typeof(List<decimal>) && value is List<object> decimalObjectList)
+			{
+				var decimalList = decimalObjectList.Select(o => Convert.ToDecimal(o, CultureInfo.InvariantCulture)).ToList();
+				return (T)(object)decimalList;
+			}
+
+			var key = (sourceType, targetType);
+			if (_typeConverterCache.TryGetValue(key, out var converter))
+			{
+				return (T)converter(value);
+			}
+
+			if (targetType.IsPrimitive || targetType == typeof(decimal))
+			{
+				var result = (T)Convert.ChangeType(value, targetType, CultureInfo.InvariantCulture);
+
+				_typeConverterCache.TryAdd(key, v => Convert.ChangeType(v, targetType, CultureInfo.InvariantCulture));
+
+				return result;
+			}
+
+			return (T)Convert.ChangeType(value, targetType);
 		}
 
 		public static void SetConfigValue<T>(string callerModule, string groupName, string configName, T value) where T : notnull
@@ -397,8 +556,15 @@ namespace Zenith
 
 		private static bool TrySetConfigValue<T>(ModuleConfig moduleConfig, string groupName, string configName, T value, string callerModule, bool checkGlobalOnly = false) where T : notnull
 		{
-			var group = moduleConfig.Groups.FirstOrDefault(g => g.Key == groupName);
-			var config = group.Value?.Items.GetValueOrDefault(configName);
+			if (!moduleConfig.Groups.TryGetValue(groupName, out var group))
+			{
+				return false;
+			}
+
+			if (!group.Items.TryGetValue(configName, out var config))
+			{
+				return false;
+			}
 
 			if (config != null)
 			{
@@ -427,17 +593,45 @@ namespace Zenith
 					}
 				}
 
-				config.CurrentValue = value;
-
-				if (GlobalChangeTracking || config.Flags.HasFlag(ConfigFlag.Global) || callerModule == CoreModuleName)
+				if (!value.Equals(config.CurrentValue))
 				{
-					SaveModuleConfig(moduleConfig.ModuleName);
+					config.CurrentValue = value;
+
+					InvalidateConfigCache(moduleConfig.ModuleName, groupName, configName);
+
+					if (GlobalChangeTracking || config.Flags.HasFlag(ConfigFlag.Global) || callerModule == CoreModuleName)
+					{
+						ScheduleModuleConfigSave(moduleConfig.ModuleName);
+					}
 				}
 
 				return true;
 			}
 
 			return false;
+		}
+
+		private static void ScheduleModuleConfigSave(string moduleName)
+		{
+			if (_pendingSaveTimers.TryGetValue(moduleName, out var existingTimer))
+			{
+				existingTimer.Change(_saveDelay, Timeout.InfiniteTimeSpan);
+			}
+			else
+			{
+				var timer = new Timer(SaveModuleConfigCallback, moduleName, _saveDelay, Timeout.InfiniteTimeSpan);
+				_pendingSaveTimers[moduleName] = timer;
+			}
+		}
+
+		private static void SaveModuleConfigCallback(object? state)
+		{
+			var moduleName = (string)state!;
+
+			_pendingSaveTimers.TryRemove(moduleName, out var timer);
+			timer?.Dispose();
+
+			SaveModuleConfig(moduleName);
 		}
 
 		private static ModuleConfig LoadModuleConfig(string moduleName)
@@ -452,13 +646,8 @@ namespace Zenith
 			{
 				try
 				{
-					var deserializer = new DeserializerBuilder()
-						.WithNamingConvention(CamelCaseNamingConvention.Instance)
-						.IgnoreUnmatchedProperties()
-						.Build();
-
 					var yaml = File.ReadAllText(filePath);
-					var loadedConfig = deserializer.Deserialize<ModuleConfig>(yaml);
+					var loadedConfig = _deserializer.Value.Deserialize<ModuleConfig>(yaml);
 
 					if (loadedConfig != null)
 					{
@@ -500,19 +689,13 @@ namespace Zenith
 			{
 				CleanupUnusedConfigs(moduleName);
 
-				var serializer = new SerializerBuilder()
-					.WithNamingConvention(CamelCaseNamingConvention.Instance)
-					.DisableAliases()
-					.ConfigureDefaultValuesHandling(DefaultValuesHandling.OmitNull)
-					.Build();
-
 				var header = $@"# This file was generated by Zenith Core.
 #
 # Developer: K4ryuu @ KitsuneLab
 # Module: {moduleName}
 #";
 
-				var yaml = header + serializer.Serialize(moduleConfig);
+				var yaml = header + _serializer.Value.Serialize(moduleConfig);
 
 				string filePath = moduleName == CoreModuleName
 					? Path.Combine(_baseConfigDirectory, "core.yaml")
